Update the readme and remove Java 9 Collections methods (List.of, Set.of)